# ray_tracing

./: Cargo.toml  flake.nix  image.ppm  justfile  shell.nix
cpu-implementation/: flake.nix
cpu-implementation/src/: lib.rs  main.rs
gpu-implementation/: Cargo.toml
gpu-implementation/src/: gui.rs  kernel.cu  main.rs  ray_tracing.rs
gpu-implementation/src/cuda/: floatN_helper.cu  kernel.cu  lib.cu  library.cu  ray.cu
src/: lib.rs  main.rs
